--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,73 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example</groupId>
-  <artifactId>datax-example</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <groupId>com.example</groupId>
+    <artifactId>datax-example</artifactId>
+    <version>1.0</version>
+    <packaging>pom</packaging>
 
-  <name>datax-example</name>
-  <url>http://maven.apache.org</url>
+    <name>datax-example</name>
+    <url>http://maven.apache.org</url>
+    <modules>
+        <module>datax-quickstart</module>
+        <module>spring-boot-datax</module>
+    </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <datax.version>1.0.0</datax.version>
+        <mysql.version>5.1.46</mysql.version>
+        <guava.version>23.0</guava.version>
+        <junit.version>4.12</junit.version>
+        <gson.version>2.8.5</gson.version>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <!-- DataX 需要安装到本地Maven仓库 -->
+            <dependency>
+                <groupId>com.datax</groupId>
+                <artifactId>datax-common</artifactId>
+                <version>${datax.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.datax</groupId>
+                <artifactId>datax-core</artifactId>
+                <version>${datax.version}</version>
+            </dependency>
+
+            <!-- MySQL 驱动 -->
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+
+            <!-- Guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <!-- Gson -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+
+            <!-- Junit  -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
