--- a/spring-boot-datax/pom.xml
+++ b/spring-boot-datax/pom.xml
@@ -1,10 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <!-- SpringBoot工程需要继承的父工程 -->
     <parent>
-        <groupId>com.example</groupId>
-        <artifactId>datax-example</artifactId>
-        <version>1.0</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.5</version>
+        <relativePath/>
     </parent>
 
     <artifactId>spring-boot-datax</artifactId>
@@ -15,14 +17,32 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <lombok.version>1.18.26</lombok.version>
     </properties>
 
     <dependencies>
+        <!-- Web开发需要的起步依赖 -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- DataX -->
+        <dependency>
+            <groupId>com.datax</groupId>
+            <artifactId>datax-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.datax</groupId>
+            <artifactId>datax-core</artifactId>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 </project>
