--- a/spring-boot-datax/pom.xml
+++ b/spring-boot-datax/pom.xml
@@ -10,14 +10,17 @@
     </parent>
 
     <artifactId>spring-boot-datax</artifactId>
-    <packaging>jar</packaging>
-
-    <name>spring-boot-datax</name>
-    <url>http://maven.apache.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <lombok.version>1.18.26</lombok.version>
+        <datax.version>1.0.0</datax.version>
+        <commons-cli-version>1.2</commons-cli-version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <commons.io.version>1.3.2</commons.io.version>
+        <commons.lang3.version>3.12.0</commons.lang3.version>
+        <fastjson2.version>2.0.53</fastjson2.version>
+        <commons.lang.version>2.6</commons.lang.version>
     </properties>
 
     <dependencies>
@@ -27,15 +30,17 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- DataX -->
+        <!-- DataX 需要安装到本地Maven仓库 -->
         <dependency>
             <groupId>com.datax</groupId>
             <artifactId>datax-common</artifactId>
+            <version>${datax.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.datax</groupId>
             <artifactId>datax-core</artifactId>
+            <version>${datax.version}</version>
         </dependency>
 
         <!-- Lombok -->
@@ -43,6 +48,43 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+
+        <!--  运行 DataX 需要的其他依赖 -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>${commons-cli-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>${fastjson2.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons.lang.version}</version>
         </dependency>
     </dependencies>
 </project>
